export enum Measure {
    HUMIDITY,
    TEMPERATURE,
    PRESSURE,
}
