export interface Resolution {
  get height(): number

  set height(height: number)

  get width(): number

  set width(width: number)
}
